[gd_scene load_steps=13 format=3 uid="uid://bcu4coohinl11"]

[ext_resource type="Script" uid="uid://x0go2x12bgoq" path="res://data/scenes_and_scripts/scramble/FadeManager.gd" id="1_jmubw"]
[ext_resource type="Shader" uid="uid://b1rxu61dsmmnb" path="res://data/scenes_and_scripts/scramble/FadeManager.gdshader" id="2_kx0xg"]
[ext_resource type="Script" uid="uid://cwn5eu4e1kboc" path="res://data/scenes_and_scripts/scramble/fade_overlay.gd" id="3_8spss"]
[ext_resource type="FontFile" uid="uid://oao8j3eixnla" path="res://data/fonts/OtherFonts/Pixel.otf" id="4_gl2ou"]
[ext_resource type="PackedScene" uid="uid://dng5jq27x7scm" path="res://data/scenes_and_scripts/scramble/player_avatar.tscn" id="5_uhpoq"]
[ext_resource type="FontFile" uid="uid://btoa7bg3w8grw" path="res://data/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-It.ttf" id="6_emw3b"]
[ext_resource type="PackedScene" uid="uid://bwq5oqsnjscuo" path="res://data/scenes_and_scripts/scramble/enemy_avatar.tscn" id="6_tx0r8"]
[ext_resource type="PackedScene" uid="uid://dexyaixglvei" path="res://data/scenes_and_scripts/scramble/player_name_label.tscn" id="8_a1c4h"]
[ext_resource type="PackedScene" uid="uid://daa0teotn1m1g" path="res://data/scenes_and_scripts/scramble/enemy_name_label.tscn" id="9_rqytd"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kx0xg"]
noise_type = 2
frequency = 0.5
fractal_ping_pong_strength = 2.495

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8spss"]
width = 128
height = 128
seamless = true
seamless_blend_skirt = 0.273
noise = SubResource("FastNoiseLite_kx0xg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kx0xg"]
shader = ExtResource("2_kx0xg")
shader_parameter/color_one = Color(0.593503, 0.726996, 1, 1)
shader_parameter/color_two = Color(1, 1, 1, 1)
shader_parameter/speed = 0.5
shader_parameter/frequency = 3.0
shader_parameter/angle = 155.0
shader_parameter/distortion_map = SubResource("NoiseTexture2D_8spss")
shader_parameter/distortion_strength = 0.18
shader_parameter/distortion_speed = 0.1

[node name="FadeManager" type="CanvasLayer"]
script = ExtResource("1_jmubw")

[node name="FadeManagerCanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true

[node name="FadeOverlay" type="ColorRect" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kx0xg")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1320.0
offset_bottom = 2868.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(4.23551e-06, 0.581428, 0.484856, 1)
script = ExtResource("3_8spss")

[node name="GameOverLabel" type="Label" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 604.0
offset_top = 1424.5
offset_right = 716.0
offset_bottom = 1443.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.799222, 0.575779, 0.39116, 1)
theme_override_colors/font_shadow_color = Color(0.364279, 0.517415, 0.666121, 0.282353)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("4_gl2ou")
text = "Round Over"
horizontal_alignment = 1

[node name="PlayerAvatar" parent="FadeManagerCanvasModulate" instance=ExtResource("5_uhpoq")]
unique_name_in_owner = true

[node name="EnemyAvatar" parent="FadeManagerCanvasModulate" instance=ExtResource("6_tx0r8")]
unique_name_in_owner = true

[node name="PlayerRoundScore" type="Label" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 640.0
offset_top = 1349.5
offset_right = 680.0
offset_bottom = 1518.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.748861, 1, 0.725283, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = -145
theme_override_fonts/font = ExtResource("6_emw3b")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="EnemyRoundScore" type="Label" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 640.0
offset_top = 1349.5
offset_right = 680.0
offset_bottom = 1518.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.748861, 1, 0.725283, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = -145
theme_override_fonts/font = ExtResource("6_emw3b")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="PlayerCumulativeScore" type="Label" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 640.0
offset_top = 1349.5
offset_right = 680.0
offset_bottom = 1518.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.748861, 1, 0.725283, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = -145
theme_override_fonts/font = ExtResource("6_emw3b")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="EnemyCumulativeScore" type="Label" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 640.0
offset_top = 1349.5
offset_right = 680.0
offset_bottom = 1518.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.748861, 1, 0.725283, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = -145
theme_override_fonts/font = ExtResource("6_emw3b")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="PlayerNameLabel" parent="FadeManagerCanvasModulate" instance=ExtResource("8_a1c4h")]
unique_name_in_owner = true

[node name="EnemyNameLabel" parent="FadeManagerCanvasModulate" instance=ExtResource("9_rqytd")]
unique_name_in_owner = true

[node name="WinLoseBox" type="HBoxContainer" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 1000.0
offset_bottom = 300.0
grow_vertical = 2
theme_override_constants/separation = 100

[node name="TimerControl" type="Control" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 640.0
offset_top = 300.0
offset_right = 680.0
offset_bottom = 340.0
grow_horizontal = 2

[node name="Timer" type="Timer" parent="FadeManagerCanvasModulate/TimerControl"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="Label" type="Label" parent="FadeManagerCanvasModulate/TimerControl"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.40518, 0.592296, 1, 1)
theme_override_font_sizes/font_size = 150

[node name="BottomRoundLabel" type="Label" parent="FadeManagerCanvasModulate"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 231.5
offset_top = 2799.0
offset_right = 1088.5
offset_bottom = 2868.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Round 1           Round 2           Round 3"
